--- a/02_async/2-3.md
+++ b/02_async/2-3.md
@@ -1,6 +1,28 @@
 # Promise
+- Promieは, jsで非同期処理を扱うためのメソッド
+- Pending, Fulfilled, Rejectedの3つの状態を持つ
+```javascript
+const promise = new Promise((resolve, reject) => {
+  // 非同期処理
+  if (成功条件) {
+    resolve(成功結果); // 成功時に呼び出す
+  } else {
+    reject(エラー内容); // 失敗時に呼び出す
+  }
+});
+promise.then(result => {
+    console.log("成功:", result); // 成功時の処理
+  })
+  .catch(error => {
+    console.error("失敗:", error); // 失敗時の処理
+  })
+  .finally(() => {
+    console.log("完了"); // 必ず実行される
+  });
+```
+## インスタンスメソッド
 Promiseには、非同期処理の結果をハンドリングするためのインスタンスメソッドが3つある(then, catch, finally)
-## then()
+### then()
 - Promiseインスタンスがfulfilled or rejectedになった際に実行するコールバックを登録するメソッド
 ```javascript
 const promise = new Promise()
